eks/ingress-controller/nginx-ingress-controller/application-sample-2/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: example-ingress
  #annotations:
  #  ingress.kubernetes.io/rewrite-target: /
spec:
  tls:
  - hosts:
    - sample2.example.com
    secretName: app-secret
  rules:
  - http:
      paths:
        - path: /app3
          backend:
            serviceName: app3-svc
            servicePort: 80
        - path: /app4
          backend:
            serviceName: app4-svc
            servicePort: 80
    host: sample2.example.com
